@startuml

title __DYNAMIC_FRAGMENT's Class Diagram__\n

  namespace com.example.dynamic_fragment {
    class com.example.dynamic_fragment.BlankFragment {
    }
  }
  

  namespace com.example.dynamic_fragment {
    class com.example.dynamic_fragment.BuildConfig {
    }
  }
  

  namespace com.example.dynamic_fragment {
    class com.example.dynamic_fragment.MainActivity {
    }
  }
  

  com.example.dynamic_fragment.BlankFragment -up-|> androidx.fragment.app.Fragment
  com.example.dynamic_fragment.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
